// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorCodeFrame should dedupe if code frames are the same 1`] = `
<React.Fragment>
  <rn-paragraph
    allowFontScaling="true"
    ellipsizeMode="tail"
    flex="1"
    fontSize="18"
    fontSizeMultiplier="NaN"
    fontWeight="600"
    foregroundColor="rgba(255, 255, 255, 1)"
    includeFontPadding="false"
    lineHeight="20"
    maxFontSizeMultiplier="1.5"
    overflow="hidden"
  >
    Source
  </rn-paragraph>
  <rn-view
    backgroundColor="rgba(51, 51, 51, 1)"
    marginLeft="10"
    marginRight="10"
    marginTop="5"
  />
  <rn-view
    borderBottomWidth="1"
    padding="10"
  />
  <rn-scrollView
    flexDirection="row"
    flexGrow="1"
    flexShrink="1"
    horizontal="true"
    overflow="scroll"
  >
    <rn-androidHorizontalScrollContentView
      flexDirection="row"
      minWidth="100%"
    >
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  63 | function ConsoleWithThrow() {
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  64 |   console.error('hit');
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎&gt; 65 |   throw new Error('test');
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎     |                  ^
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  66 | }
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  67 |
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  68 |
        </rn-text>
      </rn-paragraph>
    </rn-androidHorizontalScrollContentView>
  </rn-scrollView>
  <rn-view
    accessibilityState="{disabled:false,selected:null,checked:None,busy:false,expanded:null}"
    accessible="true"
    paddingBottom="10"
    paddingTop="10"
  >
    <rn-paragraph
      alignment="center"
      allowFontScaling="true"
      ellipsizeMode="tail"
      flex="1"
      fontFamily="monospace"
      fontSize="12"
      fontSizeMultiplier="NaN"
      foregroundColor="rgba(255, 255, 255, 0.501961)"
      includeFontPadding="false"
      lineHeight="16"
      maxFontSizeMultiplier="1.5"
      overflow="hidden"
    >
      CrashReactApp.js (65:19)
    </rn-paragraph>
  </rn-view>
</React.Fragment>
`;

exports[`LogBoxInspectorCodeFrame should render a code frame 1`] = `
<React.Fragment>
  <rn-paragraph
    allowFontScaling="true"
    ellipsizeMode="tail"
    flex="1"
    fontSize="18"
    fontSizeMultiplier="NaN"
    fontWeight="600"
    foregroundColor="rgba(255, 255, 255, 1)"
    includeFontPadding="false"
    lineHeight="20"
    maxFontSizeMultiplier="1.5"
    overflow="hidden"
  >
    Source
  </rn-paragraph>
  <rn-view
    backgroundColor="rgba(51, 51, 51, 1)"
    marginLeft="10"
    marginRight="10"
    marginTop="5"
  />
  <rn-view
    borderBottomWidth="1"
    padding="10"
  />
  <rn-scrollView
    flexDirection="row"
    flexGrow="1"
    flexShrink="1"
    horizontal="true"
    overflow="scroll"
  >
    <rn-androidHorizontalScrollContentView
      flexDirection="row"
      minWidth="100%"
    >
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  197 | });
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎    198 |
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  &gt; 199 | export default CrashReactApp;
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎        | ^
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎    200 |
        </rn-text>
      </rn-paragraph>
    </rn-androidHorizontalScrollContentView>
  </rn-scrollView>
  <rn-view
    accessibilityState="{disabled:false,selected:null,checked:None,busy:false,expanded:null}"
    accessible="true"
    paddingBottom="10"
    paddingTop="10"
  >
    <rn-paragraph
      alignment="center"
      allowFontScaling="true"
      ellipsizeMode="tail"
      flex="1"
      fontFamily="monospace"
      fontSize="12"
      fontSizeMultiplier="NaN"
      foregroundColor="rgba(255, 255, 255, 0.501961)"
      includeFontPadding="false"
      lineHeight="16"
      maxFontSizeMultiplier="1.5"
      overflow="hidden"
    >
      CrashReactApp.js (199:1)
    </rn-paragraph>
  </rn-view>
</React.Fragment>
`;

exports[`LogBoxInspectorCodeFrame should render a code frame without a location 1`] = `
<React.Fragment>
  <rn-paragraph
    allowFontScaling="true"
    ellipsizeMode="tail"
    flex="1"
    fontSize="18"
    fontSizeMultiplier="NaN"
    fontWeight="600"
    foregroundColor="rgba(255, 255, 255, 1)"
    includeFontPadding="false"
    lineHeight="20"
    maxFontSizeMultiplier="1.5"
    overflow="hidden"
  >
    Source
  </rn-paragraph>
  <rn-view
    backgroundColor="rgba(51, 51, 51, 1)"
    marginLeft="10"
    marginRight="10"
    marginTop="5"
  />
  <rn-view
    borderBottomWidth="1"
    padding="10"
  />
  <rn-scrollView
    flexDirection="row"
    flexGrow="1"
    flexShrink="1"
    horizontal="true"
    overflow="scroll"
  >
    <rn-androidHorizontalScrollContentView
      flexDirection="row"
      minWidth="100%"
    >
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  197 | });
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎    198 |
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  &gt; 199 | export default CrashReactApp;
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎        | ^
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎    200 |
        </rn-text>
      </rn-paragraph>
    </rn-androidHorizontalScrollContentView>
  </rn-scrollView>
  <rn-view
    accessibilityState="{disabled:false,selected:null,checked:None,busy:false,expanded:null}"
    accessible="true"
    paddingBottom="10"
    paddingTop="10"
  >
    <rn-paragraph
      alignment="center"
      allowFontScaling="true"
      ellipsizeMode="tail"
      flex="1"
      fontFamily="monospace"
      fontSize="12"
      fontSizeMultiplier="NaN"
      foregroundColor="rgba(255, 255, 255, 0.501961)"
      includeFontPadding="false"
      lineHeight="16"
      maxFontSizeMultiplier="1.5"
      overflow="hidden"
    >
      CrashReactApp.js
    </rn-paragraph>
  </rn-view>
</React.Fragment>
`;

exports[`LogBoxInspectorCodeFrame should render both a code frame and a component frame 1`] = `
<React.Fragment>
  <rn-paragraph
    allowFontScaling="true"
    ellipsizeMode="tail"
    flex="1"
    fontSize="18"
    fontSizeMultiplier="NaN"
    fontWeight="600"
    foregroundColor="rgba(255, 255, 255, 1)"
    includeFontPadding="false"
    lineHeight="20"
    maxFontSizeMultiplier="1.5"
    overflow="hidden"
  >
    Sources
  </rn-paragraph>
  <rn-view
    backgroundColor="rgba(51, 51, 51, 1)"
    marginLeft="10"
    marginRight="10"
    marginTop="5"
  />
  <rn-view
    borderBottomWidth="1"
    padding="10"
  />
  <rn-scrollView
    flexDirection="row"
    flexGrow="1"
    flexShrink="1"
    horizontal="true"
    overflow="scroll"
  >
    <rn-androidHorizontalScrollContentView
      flexDirection="row"
      minWidth="100%"
    >
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  62 |
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  63 | function ConsoleWithThrow() {
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎&gt; 64 |   console.error('hit');
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎     |                ^
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  65 |   throw new Error('test');
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  66 | }
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  67 |
        </rn-text>
      </rn-paragraph>
    </rn-androidHorizontalScrollContentView>
  </rn-scrollView>
  <rn-view
    accessibilityState="{disabled:false,selected:null,checked:None,busy:false,expanded:null}"
    accessible="true"
    paddingBottom="10"
    paddingTop="10"
  >
    <rn-paragraph
      alignment="center"
      allowFontScaling="true"
      ellipsizeMode="tail"
      flex="1"
      fontFamily="monospace"
      fontSize="12"
      fontSizeMultiplier="NaN"
      foregroundColor="rgba(255, 255, 255, 0.501961)"
      includeFontPadding="false"
      lineHeight="16"
      maxFontSizeMultiplier="1.5"
      overflow="hidden"
    >
      CrashReactApp.js (64:17)
    </rn-paragraph>
  </rn-view>
  <rn-view
    backgroundColor="rgba(51, 51, 51, 1)"
    marginLeft="10"
    marginRight="10"
    marginTop="5"
  />
  <rn-view
    borderBottomWidth="1"
    padding="10"
  />
  <rn-scrollView
    flexDirection="row"
    flexGrow="1"
    flexShrink="1"
    horizontal="true"
    overflow="scroll"
  >
    <rn-androidHorizontalScrollContentView
      flexDirection="row"
      minWidth="100%"
    >
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  89 |
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  90 | function Child() {
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎&gt; 91 |   return &lt;ConsoleWithThrow /&gt;;
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎     |          ^
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  92 | }
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  93 |
        </rn-text>
      </rn-paragraph>
      <rn-paragraph
        allowFontScaling="true"
        ellipsizeMode="tail"
        flexGrow="1"
        fontSize="NaN"
        fontSizeMultiplier="NaN"
        foregroundColor="rgba(0, 0, 0, 0)"
        maxFontSizeMultiplier="1.5"
        overflow="hidden"
      >
        <rn-text
          allowFontScaling="true"
          fontFamily="monospace"
          fontSize="12"
          foregroundColor="rgba(255, 255, 255, 1)"
          layoutDirection="ltr"
          lineHeight="20"
          maxFontSizeMultiplier="1.5"
        >
          ‎  94 |
        </rn-text>
      </rn-paragraph>
    </rn-androidHorizontalScrollContentView>
  </rn-scrollView>
  <rn-view
    accessibilityState="{disabled:false,selected:null,checked:None,busy:false,expanded:null}"
    accessible="true"
    paddingBottom="10"
    paddingTop="10"
  >
    <rn-paragraph
      alignment="center"
      allowFontScaling="true"
      ellipsizeMode="tail"
      flex="1"
      fontFamily="monospace"
      fontSize="12"
      fontSizeMultiplier="NaN"
      foregroundColor="rgba(255, 255, 255, 0.501961)"
      includeFontPadding="false"
      lineHeight="16"
      maxFontSizeMultiplier="1.5"
      overflow="hidden"
    >
      CrashReactApp.js (90:11)
    </rn-paragraph>
  </rn-view>
</React.Fragment>
`;

exports[`LogBoxInspectorCodeFrame should render null for no code frame 1`] = `null`;
